Migrate WildFly Liquibase subsystem to WildFly 28
  * Complete MSC API modernization:
    - Remove all deprecated AbstractService usage
    - Replace addService(name, service) with addService(name).setInstance(service)
    - Migrate from addDependency() to requires() pattern
    - Implement modern Service interface (org.jboss.msc.Service)
    - Fix DataSource type casting with proper WildFly patterns

  * Update Galleon plugin versions for WildFly 28 compatibility:
    - Upgrade galleon-maven-plugin to 5.1.0.Final
    - Upgrade wildfly-galleon-maven-plugin to 6.4.0.Final
    - Update WildFly Core to 20.0.1.Final (compatible with WildFly 28.0.1.Final)

  * Migrate examples to Jakarta EE 10:
    - Replace javax.* APIs with jakarta.* equivalents
    - Update CDI API to jakarta.enterprise.cdi-api:4.0.1
    - Update Servlet API to jakarta.servlet-api:6.0.0
    - Update Annotation API to jakarta.annotation-api:2.1.1

  * Update build configuration:
    - Replace generic Galleon plugin with WildFly-specific variants
    - Modernize feature pack build configuration
    - Update test provisioning to use WildFly Galleon plugins